Fix styling issues on mobile on quiz page
Font-sizes, button sizes, flex-wrap for heading id

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,6 +157,7 @@ a {
 /* H1 and home button for quiz page */
 #heading {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     width: 100%;
 }
@@ -167,7 +168,7 @@ a {
 
 /* Section of entire quiz page */
 #quiz {
-    width: 80%;
+    width: 100%;
     background: rgba(0, 0, 0, .6);
 }
 
@@ -202,7 +203,7 @@ a {
 /* Button to activate hint */
 #hint-btn {
     display: block;
-    font-size: 1.3rem;
+    font-size: .9rem;
     width: 100%;
     padding: 10px;
     margin: 50px 0;
